[package]
name = "lix_ledger"
version = "0.1.0"
edition = "2021"
# author = ["Philix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name= "app"
path="src/lib.rs"

[[bin]]
name= "app"
path="src/main.rs"

[dependencies]
actix-rt="2.9.0"
actix-web="4.4.0"
crypto-hash= "0.3.4"
clap = "4.0.29"
config = "0.13.3"
dotenv = "0.15.0"
hex = "0.4.3"
sha2 = "0.10.6"
rust-crypto = "^0.2"
bincode = "1.3"
failure = "0.1"
sled = "0.34"
log = "0.4"
env_logger = "0.10.0"
bitcoincash-addr = "0.5.2"
rand = "0.8.5"
merkle-cbt = "0.3.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"